--- a/src/pages/Auth.module.css
+++ b/src/pages/Auth.module.css
@@ -5,10 +5,15 @@
   justify-content: start;
   overflow-x: hidden;
   position: relative;
-  padding: 32px 15px;
+  padding: 10px 15px;
   background-color: rgba(23,33,43,.3);
 }
+.auth_sub_conteiner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
+}
 .auth_container::before {
   content: "";
   width: 100%;
@@ -24,13 +29,22 @@
 
 .auth_logo {
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
   display: flex;
   width: 100%;
   max-width: 380px;
 }
 
 .auth_logo img {
-  width: 100%;
+  width: 70%;
   object-fit: contain;
+}
+@media screen and (min-height: 700px) {
+  .auth_sub_conteiner {
+    justify-content: center;
+    gap: 50px;
+  }
+  .auth_logo img {
+    width: 100%;
+  }
 }
